# SmartNotesAssistant

./: .gitignore  README.md  future_plans.txt  main.py  pyproject.toml  roadmap.txt
src/: load_and_vectorize_data.py  load_data.py  perform_rag_search.py  perform_rag_search_v2.py
src/views/: chat_screen.py  setup_screen.py
src/widgets/: app_header.py  chat_message.py
