[project]
name = "smartnotesassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-community",
    "vllm",
    "pymilvus",
    "torch",
    "transformers",
    "unstructured",
    "unstructured[md]",
    "sentence_transformers",
]
