[project]
name = "smartnotesassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-community",
    "torch",
    "transformers",
    "unstructured",
    "unstructured[md]",
    "sentence_transformers",
    "langchain-huggingface>=0.3.0",
    "langchain-milvus>=0.2.0",
    "textual>=3.6.0",
    "rich>=14.0.0",
]
